# life_polars_plugin

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: publish_to_pypi.yml
game_of_life/: __init__.py  utils.py
input/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt
src/: expressions.rs  lib.rs
tests/: test_helpers.py  test_oscillators.py  test_pig_latinnify.py  test_rules.py  test_still_patterns.py
