[package]
name = "polars-game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_of_life"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.15.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.41.3", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

