[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.6"]
build-backend = "maturin"

[project]
name = "polars-game-of-life"
version = "0.1.0"
description = "A polars plugin to showcase some features of the plugin system."
authors = [
    { name = "Bruno Conde Kind" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["conway", "life", "rust", "python", "polars", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "polars>=0.41.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "ruff>=0.5.0",
    "maturin>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/condekind/life_polars_plugin"
Documentation = "https://github.com/condekind/life_polars_plugin"
Repository = "https://github.com/condekind/life_polars_plugin"
Bug-Tracker = "https://github.com/condekind/life_polars_plugin/issues"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
